Implement favorits handling with eclipse store